--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@
         @apply cursor-pointer focus:text-yellow-400 focus:border-b-2 hover:text-red-500 hover:border-b-2 pb-2 hover:border-b-red-500 focus:border-b-amber-200
     }
 }
+
+@theme{
+    --breakpoint-small:320px;
+    --breakpoint-small1:414px;
+    --breakpoint-medium:480px;
+}
